overflow fix

--- a/src/components/Form/components/Select.module.scss
+++ b/src/components/Form/components/Select.module.scss
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     height: 3em;
+    width: 100%;
     background-color: white;
     border-radius: 1.5em;
     @include def-shadow;
@@ -17,7 +18,7 @@
     }
 
     select {
-        flex: 1;
+        width: 100%;
         background-color: inherit;
         height: 100%;
         border: 0;
@@ -29,6 +30,7 @@
         -ms-appearance: none;
     }
 }
-.down{
+
+.down {
     margin-left: 0.5em;
 }
